source/stylesheets/site.css.scss
$f-main: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
$c-highlight: #e53e3e;
$c-highlight-dark: #da3838;

@mixin mobile() {
  @media screen and (max-width: 640px) {
    @content;
  }
}

html {
  font-size: 20px;

  @include mobile {
    font-size: 16px;
  }
}
body {
  background-color: #fff;
  color: #222;
  font-family: $f-main;
  margin: 0;
}

a {
  color: inherit;

  &:focus,
  &:hover {
    text-decoration: none;
  }
  img {
    border: none;
  }
}

h2 {
  margin: 3rem 0 1rem 0;

  @include mobile {
    margin: 2rem 0 1rem 0;
  }
}

p {
  line-height: 1.4;

  .blog-detail & {
    margin: 0;
  }
}
ul.list {

  li {
    line-height: 1.4;
    margin: .5rem 0;
  }
}

h4 {

  .blog-detail & {
    margin: 0;
  }
}

th {
  padding: 10px;
  font-weight: normal;
  text-align: right;
}

td {
  padding: 10px; 
  font-weight: bold;
}

.btn {
  --webkit-appearance: none;
  display: inline-block;
  padding: .75rem 2rem;
  border: none;
  border-radius: 4px;
  background-color: $c-highlight-dark;
  color: #fff;
  font-size: 1rem;
  text-decoration: none;
  margin: 2rem 0;
  cursor: pointer;
  box-shadow: 0 4px 20px -5px rgba(#000, .2);
  transition: .2s background-color;

  &:hover {
    background-color: #c00;
  }
  &:disabled {
    background-color: #f5b8b8;
  }
  &--inv {
    background-color: #fff;
    color: $c-highlight-dark;

    &:hover {
      background-color: #fee;
    }
  }
  &--small {
    height: 12px;
    font-size: 14px;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: .5rem;
  }
  &--download {
    img {
      height: 15px; padding-bottom: 2px; margin-right: 3px; vertical-align: middle;
    }
  }
}

.container {
  max-width: 940px;
  padding: 0 1rem;
  margin: 0 auto;
  box-sizing: border-box;
  position: relative;

  &--wide {
    max-width: 1500px;
  }
}

.hero {
  background: $c-highlight;
  background-image: linear-gradient(#f74141, #e53e3e);
  color: #fff;
  box-shadow: 0 4px 50px 0 rgba(#f00, .25);
  border-bottom: 1px solid #a00;

  .container {
    padding: 5rem 1rem 6rem 1rem;
  }
  &__headline {
  }
  .logo {
    display: block;
    width: 6rem;
    height: auto;
    margin-bottom: 2rem;
  }
  @include mobile {
    .container {
      padding: 5rem 1rem 2rem 1rem;
    }
    .logo {
      margin-left: 0;
    }
  }
}

.form {
  padding: 2rem 0 6rem 0;
}

.input-wrap {
  margin: 2.5rem 0;

  .label {
    display: block;
    font-size: .8rem;
    color: #666;
    font-weight: bold;
    margin-bottom: .5rem;
    letter-spacing: .02rem;
  }
  .subtext {
    display: block;
    font-size: .7rem;
    color: #999;
    // font-style: oblique;
    line-height: 1.4;
    font-weight: normal;
    margin-bottom: .75rem;
    margin-top: -.25rem;
    letter-spacing: .02rem;

    &--rb-inset {
      margin-left: 1.5em;
      margin-top: .15rem;
    }

    &--inset {
      margin-top: 5px;
    }
  }
  &--child {
    padding-left: 1rem;
    margin-top: -1rem;
    border-left: 4px solid #eee;
  }
  &--text {

    .input {
      --webkit-appearance: none;
      border: 1px solid #aaa;
      display: block;
      width: 100%;
      font-size: 1rem;
      font-family: $f-main;
      border-radius: 3px;
      padding: .5rem;
      box-sizing: border-box;

      &:focus {
        outline: none;
        border-color: #000;
        background: #fafafa;
      }
      &--short {
        max-width: 12rem;
      }
    }
  }
  &--radio {
    .radio-wrap {
      display: flex;
      flex-wrap: wrap;
    }
    .radio-item {
      display: flex;
      align-items: center;
      margin-right: 1.5rem;
      margin-top: .25rem;

      @include mobile {
        line-height: 1.7;
        margin-top: .25rem;
      }
    }
    .input {
      margin-right: .5rem;
    }
    span {
      // font-size: .8rem;
    }
  }

  &--checkboxlist {
    .checkboxlist-item {
      display: block;
      margin-bottom: 0.5em;

      margin-left: 26px;
      input {
        margin-left: -26px;
        font-size: 24px;
      }
    }
  }

  &__info {
    display: block;
    font-size: .7rem;
    line-height: 1.1rem;
    max-width: 500px;
    margin-top: .5rem;
    color: #888;
    padding-left: 1.5rem;
    position: relative;

    &::before {
      content: "i";
      position: absolute;
      top: .05rem;
      left: 0;
      display: block;
      width: 1rem;
      height: 1rem;
      background-color: #bbb;
      text-shadow: 0 1px 1px rgba(#000, .5);
      color: #fff;
      text-align: center;
      font-weight: bold;
      border-radius: 99%;
      line-height: 1rem;
    }
  }

  &#wrap-participantcode {
    margin-top: 1.5rem;
  }
}

.dropdown {
  font-size: 1rem;
  font-family: $f-main;
  border-radius: 3px;
}

.code {
  font-size: 1rem;
  font-family: monospace;
}

.section-title {
  display: block;
  margin-top: 6rem;
  border-bottom: 1px solid #ccc;
  padding-bottom: .5rem;
}

.footer {
  background: #fafafa;
  border-top: 1px solid #ddd;
  padding: 2rem 0;
  color: #666;
  font-size: .8rem;
  text-align: center;

  &__nav {
    list-style-type: none;
    margin: 0;
    padding: 0;

    li {
      display: inline;
      margin: 0 .5rem;
    }
  }
}

.header {
  background-color: $c-highlight;
  color: #fff;
  padding: .5rem 0;
  height: 4rem;
  position: relative;
  box-shadow: 0 2px 80px 0 rgba(#f00, .2);

  .container {
    height: 100%;
  }
  h1 {
    font-size: 1.5rem;
    padding-left: 4rem;

    a {
      text-decoration: none;
    }
    @include mobile {
      font-size: 1rem;
      padding-left: 3rem;
    }
  }
  .logo {
    position: absolute;
    top: 50%;
    left: 1rem;
    width: auto;
    height: 3rem;
    transform: translateY(-50%);
    z-index: 1;

    @include mobile {
      height: 2.5rem;
    }
  }
  @include mobile {
    box-shadow: 0 2px 50px 0 rgba(#f00, .2);
  }
}

section.subpage {
  padding: 2rem 0 4rem 0;

  @include mobile {
    padding: 1rem 0;
  }
}

.home-section {
  padding: 2rem 1rem 2rem 1rem;
  border-bottom: 1px solid #ddd;

  h2 {
    font-size: .75rem;
    margin: 0 auto;
    margin-bottom: .5rem;
    text-align: center;
    font-weight: normal;
  }
}
.partners-wrap, .social-wrap {
  max-width: 940px;
  padding: 0 1rem;
  box-sizing: border-box;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
.partner {
  width: 11rem;
  margin: 0 1rem;

  img {
    display: block;
    width: 100%;
    height: auto;
  }

  @include mobile {
    width: 100%;
    max-width: 10rem;
  }
}

.social-wrap {
  ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    text-align: center;

    li {
      display: inline;
    }
  }
}
.social-btn {
  display: inline-block;
  font-size: .8rem;
  padding: .5rem 1rem;
  border: 2px solid #aaa;
  border-radius: 4px;
  background-image: url('../images/social-fb.svg');
  background-size: auto 100%;
  background-position: 0 0;
  background-repeat: no-repeat;
  padding-left: 2.5rem;
  text-decoration: none;
  margin: .5rem .5rem;

  &--fb {
    border-color: #3A559F;
  }
  &--twitter {
    background-image: url('../images/social-twitter.svg');
    border-color: #03A9F4;
  }
  &--whatsapp {
    background-image: url('../images/social-whatsapp.svg');
    border-color: #2CB742;
  }
  &--mail {
    background-image: url('../images/social-mail.svg');
  }
  &:hover {
    background-color: #fafafa;
  }
}

.faq__question {
  font-size: 1rem;
  line-height: 1.4;
  margin-top: 2rem;
  border-bottom: 2px solid #ddd;
  padding-bottom: 4px;
}

.partner-grid {
  ul {
    list-style-type: none;
    margin: 0 -.5rem;
    width: calc(100% + 1rem);
    padding: 0;
    display: flex;
    flex-wrap: wrap;

    li {
      display: block;
      width: calc(33.3% - 1rem);
      margin: .5rem .5rem;
      border: 1px solid #ddd;
      box-sizing: border-box;

      @include mobile {
        width: calc(50% - .5rem);
        margin: .5rem .25rem;
      }

      img {
        display: block;
        width: 100%;
      }
    }
  }
}

.homelink {
  margin-top: 1rem;
  margin-bottom: -1rem;
  position: relative;
  z-index: 1;

  a {
    text-decoration: none;

    &:before {
      content: "← ";
    }
    &:hover {
      color: $c-highlight;
    }
  }
}

.response-share {
  margin-top: 4rem;
}

.message {
  padding: 1rem;
  font-size: .8rem;
  text-align: center;
  background-color: #000;
  color: #fff;
  font-weight: bold;
  letter-spacing: .05rem;
}

.hidden {
  display: none;
}

.map-container {
  width: 100%;
  height: 0;
  padding-bottom: 70%;
  box-sizing: border-box;
  position: relative;

  iframe {
    position: absolute;
    width: 100%;
    height: 100%,
  }

  .map--detail & {
    padding-bottom: 65%;
    margin-bottom: 4rem;

    @include mobile {
      padding-bottom: 140%;
    }
  }
}

.navigation {
  position: absolute;
  top: 2rem;
  left: 0;
  width: 100%;
  z-index: 1;

  &__inner {
    max-width: 940px;
    margin: 0 auto;
    position: relative;
    padding: 0 1rem;
    box-sizing: border-box;
  }

  @include mobile {
    top: 1rem;
  }
  .header & {
    top: 1rem;
  }
}

.main-nav {
  margin-top: .5rem;

  ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    text-align: right;

    li {
      display: inline;
      margin-left: 1rem;
      font-weight: bold;

      a {
        text-decoration: none;
      }
    }
  }
}

.lang-nav {
  display: block;
  width: 100%;
  text-align: right;
  list-style-type: none;
  margin: 0;
  padding: 0;

  li {
    display: inline;
    margin-left: 1rem;
    font-size: .8rem;

    a {
      text-decoration: none;

      &.active {
        text-decoration: underline;
      }
    }
  }

  @include mobile {
    top: 1rem;
  }
}

.boxed {
  border: solid 1px #ddd; border-radius: 3px;
  background: #fafafa;
  padding: 1rem 1.5rem;

  .reduced-margins {
    margin-top: 1rem;
  }

  .input-wrap {
    border-left-color: #93b7a5;
  }
}
.code-chooser.boxed {
  margin: 3rem 0 4rem 0;

  .input-wrap {
    margin: .5rem 0;
  }
}

#randomKittenBox {
  padding: 3px; border-radius: 3px;
  border: solid 1px #ccc;
  background: white;
  width: 400px;
  margin: 0 auto;
  min-height: 200px;
  background: url('../images/oval.svg') no-repeat center center;

  img {
    width: 400px; min-height: 200px; margin: 0;
  }
}

section.map {
  padding: 2rem 0 2rem 0;

  @include mobile {
    padding: 1rem 0;
  }
}

.map-icon {
  height: 20px;
  padding: 0px 2px;
  vertical-align: bottom;
}

.survey_additional_container {
  margin-bottom: 2em;
}

.survey_additional_header {
  margin: 3rem 0 1rem 0;
  font-size: 1.5rem;
  color: #555;
}

.survey_additional,
.survey_additional_part2 {
  margin: .5rem 0;
  font-size: .8rem;
  color: #555;
}

.blog {
  .blog_time {
    font-weight: normal;
    color: #888;
    font-size: .8rem;
    margin-top: -.5rem;
    // font-style: italic;
  }
}

.alert {
  border-radius: 8px;
  padding: 20px;
  margin-bottom: 2rem;
  font-weight: normal;
  font-size: 18px;
}
.alert-primary {
  background-color: #a8dbf0;
  border: solid 1px #a8dbf0;
  color: #597580;
}
.text-center {
  text-align: center;
}
.font-italic {
  font-style: italic;
}

.moreinfo-links {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  // justify-content: space-evenly;

  li {
    font-size: .8rem;
    margin-right: 1rem;

    a {
      display: block;
      text-decoration: underline;
      color: #888;
    }
  }
}

.blog-summary {
  margin-top: 1rem;
  color: #888;
}

